<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="left|center"
        android:paddingStart="@dimen/dimen_25dp"
        android:orientation="vertical">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBoldTextView
            android:id="@+id/txt_greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:text="@string/greetings"
            android:textColor="@color/greeting"
            android:textSize="@dimen/text_size_14sp" />

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBlackTextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_10dp"
            android:text="@string/welcome_to"
            android:textColor="@color/welcome_title"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_intro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="@dimen/dimen_25dp"
        android:paddingEnd="@dimen/dimen_25dp"
        android:orientation="vertical">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBlackTextView

            android:id="@+id/txt_welcome_pltfrm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/welcome_to_our_new_platform"
            android:textColor="@color/welcome_platform"
            android:textSize="@dimen/text_size_17sp"
            android:textStyle="bold" />

        <com.trident.android.autootpdetection.utils.customfontviews.MuliSemiBoldTextView
            android:id="@+id/txt_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:text="@string/services"
            android:textColor="@color/greeting"
            android:textSize="@dimen/text_size_14sp" />

        <com.trident.android.autootpdetection.utils.customfontviews.MuliRegularTextView
            android:id="@+id/txt_getStarted"
            android:layout_width="@dimen/dimen_250_dp"
            android:layout_height="@dimen/dimen_40_dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/button_bg"
            android:elevation="5dp"
            android:gravity="center"
            android:shadowColor="#6C63FF"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp" />

    </LinearLayout>


</LinearLayout>