<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/ic_rectangle"
        android:gravity="center"
        android:orientation="vertical">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBlackTextView
            android:id="@+id/txt_verify_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/verify_your_phone_number"
            android:textColor="@color/welcome_title"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="bold" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBoldTextView
            android:id="@+id/txt_selected_mobile_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/selected_mobile_number"
            android:textColor="@color/verify_no"
            android:textSize="@dimen/text_size_17sp" />

        <LinearLayout
            android:id="@+id/linear_mobile_no_layout"
            android:layout_width="@dimen/dimen_250_dp"
            android:layout_height="@dimen/dimen_40_dp"
            android:layout_below="@+id/txt_selected_mobile_num"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_30_dp"
            android:background="@drawable/mobile_num_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_IndiaFlag"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="@dimen/dimen_15dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:src="@drawable/ic_india" />

            <com.trident.android.autootpdetection.utils.customfontviews.MuliSemiBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_line"
                android:drawablePadding="@dimen/padding_10dp"
                android:padding="@dimen/padding_5dp"
                android:text="@string/_91"
                android:textColor="@color/mobile_no"
                android:textSize="@dimen/text_size_17sp"
                android:visibility="visible" />

            <com.trident.android.autootpdetection.utils.customfontviews.MuliSemiBoldAppcompatEditText
                android:id="@+id/phone_number_edt"
                android:layout_width="@dimen/dimen_250_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@android:color/transparent"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:textColor="@color/mobile_no"
                android:textSize="@dimen/text_size_17sp" />
        </LinearLayout>

        <com.trident.android.autootpdetection.utils.customfontviews.MuliRegularTextView
            android:id="@+id/txt_next"
            android:layout_width="@dimen/dimen_250_dp"
            android:layout_height="@dimen/dimen_40_dp"
            android:layout_below="@+id/linear_mobile_no_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/button_bg"
            android:elevation="5dp"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14sp" />

        <ImageView
            android:id="@+id/img_verify_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_next"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="-0.5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_messagesent" />

    </RelativeLayout>


</LinearLayout>