<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/ic_rectangle"
        android:gravity="center">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBlackTextView
            android:id="@+id/txt_otp_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_10dp"
            android:text="@string/otp_verification"
            android:textColor="@color/welcome_title"
            android:textSize="@dimen/text_size_25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <com.trident.android.autootpdetection.utils.customfontviews.MuliBoldTextView
            android:id="@+id/txt_enter_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/padding_10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/enter_your_otp_here"
            android:textColor="@color/verify_no"
            android:textSize="@dimen/text_size_17sp" />

        <LinearLayout
            android:id="@+id/linear_edt_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:layout_below="@+id/txt_enter_otp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:padding="@dimen/padding_10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_otp_1"
                android:layout_width="@dimen/dimen_40_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/ic_otp_bg" />

            <TextView
                android:id="@+id/txt_otp_2"
                android:layout_width="@dimen/dimen_40_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/ic_otp_bg" />

            <TextView
                android:id="@+id/txt_otp_3"
                android:layout_width="@dimen/dimen_40_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:gravity="center"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/ic_otp_bg" />

            <TextView
                android:id="@+id/txt_otp_4"
                android:layout_width="@dimen/dimen_40_dp"
                android:layout_height="@dimen/dimen_40_dp"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:background="@drawable/ic_otp_bg" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_otp_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:contentDescription="@string/todo"
            android:layout_marginBottom="-1.5dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/linear_edt_otp"
            android:src="@drawable/ic_otpreceive" />

    </RelativeLayout>

</LinearLayout>